--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
         <meta charset="utf-8">
         <title>Golden</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Signika:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto+Serif&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="vendor/bootstrap-grid.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar fixed-top">
-            <a class="navbar-brand" href="#">
-                <img src="https://i.postimg.cc/dQdcpV6Z/pobrane.png" alt="logo Golden" width="160px" height="90px">
+            <a class="navbar-brand mx-5" href="#">
+                <img src="https://i.postimg.cc/dQdcpV6Z/pobrane.png" alt="logo Golden" width="200px" height="90px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,5 +28,9 @@
                 </ul>
             </div>
         </nav>
+        <section class="header">
+            <div class="container">
 
+            </div>
+        </section>
     </body>
