--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Golden</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto+Serif&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="vendor/bootstrap-grid.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="bootstrap-grid.css">
+        <link rel="stylesheet" href="style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -20,17 +20,19 @@
             </button>
             <div class="collapse navbar-collapse mx-5 justify-content-evenly" id="mobile-menu">
                 <ul class="navbar-nav">
-                    <li><a class="nav-link" href="#">HOME</a></li>      
-                    <li><a class="nav-link" href="#">SERVICE</a></li>
-                    <li><a class="nav-link" href="#">PORTFOLIO</a></li>
-                    <li><a class="nav-link" href="#">ABOUT</a></li>
-                    <li><a class="nav-link" href="#">CONTACT</a></li>
+                    <li><a class="nav-link text-light" href="#">HOME</a></li>      
+                    <li><a class="nav-link text-light" href="#">SERVICE</a></li>
+                    <li><a class="nav-link text-light" href="#">PORTFOLIO</a></li>
+                    <li><a class="nav-link text-light" href="#">ABOUT</a></li>
+                    <li><a class="nav-link text-light" href="#">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
         <section class="header">
             <div class="container">
-
+                <a class="bg-img">
+                    <img src="https://i.postimg.cc/rpMRTMR1/pexels-nghia-pm-1555177.jpg" width="100%" alt="background-image">
+                </a>
             </div>
         </section>
     </body>
