--- a/index.html
+++ b/index.html
@@ -11,22 +11,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar navbar-transparent">
-                <a class="navbar-brand mx-5" href="#">
-                    <img src="https://i.postimg.cc/dQdcpV6Z/pobrane.png" alt="logo Golden" width="200px" height="90px">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse mx-5 justify-content-evenly" id="mobile-menu">
-                    <ul class="navbar-nav">
-                        <li><a class="nav-link text-light" href="#">HOME</a></li>      
-                        <li><a class="nav-link text-light" href="#">SERVICE</a></li>
-                        <li><a class="nav-link text-light" href="#">PORTFOLIO</a></li>
-                        <li><a class="nav-link text-light" href="#">ABOUT</a></li>
-                        <li><a class="nav-link text-light" href="#">CONTACT</a></li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-md navbar-transparent">
+            <a class="navbar-brand mx-5" href="#">
+                <img src="https://i.postimg.cc/dQdcpV6Z/pobrane.png" alt="logo Golden" width="200px" height="90px">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse mx-5 justify-content-evenly" id="mobile-menu">
+                <ul class="navbar-nav">
+                    <li><a class="nav-link text-light" href="#">HOME</a></li>
+                    <li><a class="nav-link text-light" href="#">SERVICE</a></li>
+                    <li><a class="nav-link text-light" href="#">PORTFOLIO</a></li>
+                    <li><a class="nav-link text-light" href="#">ABOUT</a></li>
+                    <li><a class="nav-link text-light" href="#">CONTACT</a></li>
+                </ul>
             </div>
         </nav>
         <section class="header">
@@ -37,7 +36,7 @@
                         <div class="card-body position-absolute top-50 start-50 translate-middle text-light text-center">
                             <h5 class="fst-italic">Welcome To Our Studio!</h5>
                             <h1 class="lh-md">IT'S NICE TO MEET YOU</h1>
-                            <a class="btn btn-warning text-light"><span>TELL ME MORE</span></a>
+                            <a class="btn btn-warning text-light">TELL ME MORE</a>
                         </div>
                     </div>
                 </div>
@@ -83,7 +82,7 @@
                             </div>
                         </div>
                     </div>
-                </div>  
+                </div>
             </div>
         </section>
         <section class="our-portfolio bg-light py-5">
@@ -163,20 +162,21 @@
                     </div>
                 </div>
             </div>
-    </section>
-    <section class="page-footer py-3">
-        <div class="row">
-            <div class="col col-md-4">
-                <p class="d-flex justify-content-around ps-4">©Copyright 2014 FreebiesXpress.com</p>
-            </div>
-            <div class="col col-md-6">
-                <div class="icons ps-2 text-center">
-                    <i class="fa-brands fa-instagram mx-2 my-2"></i>
-                    <i class="fa-brands fa-twitter mx-2 my-2"></i>
-                    <i class="fa-brands fa-facebook mx-2 my-2"></i>
-                    <i class="fa-brands fa-youtube mx-2 my-2"></i>
+        </section>
+        <section class="page-footer py-3">
+            <div class="row">
+                <div class="col col-md-4">
+                    <p class="d-flex justify-content-around ps-4">©Copyright 2014 FreebiesXpress.com</p>
+                </div>
+                <div class="col col-md-6">
+                    <div class="icons ps-2 text-center">
+                        <i class="fa-brands fa-instagram mx-2 my-2"></i>
+                        <i class="fa-brands fa-twitter mx-2 my-2"></i>
+                        <i class="fa-brands fa-facebook mx-2 my-2"></i>
+                        <i class="fa-brands fa-youtube mx-2 my-2"></i>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
     </body>
+</html>
